@@ -1,7 +1,7 @@
 <?xml version="1.2.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.orangetv"
        name="OrangeTV"
-       version="1.3"
+       version="1.4"
        provider-name="Michal Novotný, Štěpán Ort">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
